fix extra scrollbar

--- a/css/mail.css
+++ b/css/mail.css
@@ -19,7 +19,7 @@
 }
 
 .mail_account {
-	padding: 12px;
+	padding: 11px 12px;
 	border-bottom: 1px solid #ddd;
 }
 
